# plasma-helloworld

./: CMakeLists.txt  README.md
helloworld/: CMakeLists.txt  README.md
helloworld/package/: metadata.desktop
helloworld/package/contents/ui/: main.qml
helloworld1/: CMakeLists.txt  README.md
helloworld1/package/: metadata.desktop
helloworld1/package/contents/ui/: main.qml
helloworld2/: CMakeLists.txt  README.md
helloworld2/package/: metadata.desktop
helloworld2/package/contents/ui/: main.qml
po/: CMakeLists.txt  zh_CN.po
